--- a/AWST/MidtermActs/MidtermActivity1/index.html
+++ b/AWST/MidtermActs/MidtermActivity1/index.html
@@ -19,7 +19,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-    <title>Ambas - Midterm Activity 1</title>
+    <title>- Midterm Activity 1</title>
 </head>
 
 <body class="costum-bg m-4">
